--- a/style.css
+++ b/style.css
@@ -67,11 +67,11 @@ body {
 #nooo {
     position: absolute;
     left: 0;
-    transition: 0.2s all ease-in-out;
+    transition: 0.05s all ease-in-out;
 }
 
 #yessir:hover {
-    background-color: hotpink;
+    background-color: purple;
 }
 
 p{
