--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     width: 20rem;
     height: 25rem;
     border-radius: 2rem;
-    background-image: url("ChatGPT Image 13. 2. 2026, 12_29_21.png");
+    background-image: url("https://tenor.com/sk/view/chiens-funnyanimals-dogs-gif-18329643505618339917");
     background-position: center;
     background-size: cover;
 }
