--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ h1 {
 }
 
 .image {
-    width: 20rem;
-    height: 25rem;
-    border-radius: 2rem;
-    background-image: url("https://tenor.com/sk/view/chiens-funnyanimals-dogs-gif-18329643505618339917");
+    width: 30rem;
+    height: 38rem;
+    border-radius: 4rem;
+    background-image: url("https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWRvOHF2OGQyeXJmMnF2YmFyMjV1bjUzNnFjOGE3MWFpOWQ0bXpndyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/YnNGYBiYXedfeAwT8f/giphy.gif");
     background-position: center;
     background-size: cover;
 }
