--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .image {
-    width: 40rem;
+    width: 30rem;
     height: 25rem;
     border-radius: 2rem;
     background-image: url("https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExOXJyN2tmeXh1bzV1b2RsOXY0eTVkcTkxeXRhNXdwOG51YmNtaGM1dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pcOHEAG38BUaY/giphy.gif");
@@ -72,6 +72,18 @@ body {
 
 #yessir:hover {
     background-color: purple;
+}
+h2 {
+    width: fit-content;
+    display: flex;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    color: black;
+    font-family: "JetBrains Mono", sans-serif;
+    background-color: #FFFFFF;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
 }
 
 p{
